# Gstreamer_tutorials

./: .gitignore  CMakeLists.txt  README.md
src/: auto_pipeline.cpp  dynamic_pipeline.cpp  dynamic_pipeline_2.cpp  dynamic_pipeline_3.cpp  get_version.cpp  manual_pipeline.cpp
